21-GKE-Gateway-API/13-GKE-Gateway-API-Global-LB/p2-global-k8sresources-yaml/04-gateway-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: route-external-http
spec:
  parentRefs:
  - kind: Gateway
    name: mygateway1-global
  rules:
  - backendRefs:
    - name: myapp1-service
      port: 80
